--- a/view/src/css/content.css
+++ b/view/src/css/content.css
@@ -1,6 +1,5 @@
 
 .serach{
-    width: 100%;
     height: 465px;
     /* margin-top: -85px; */
     background-image: linear-gradient(134deg, rgb(19, 183, 207) -5%, rgb(54, 91, 180) 56%, rgb(54, 91, 180) 56%);
@@ -10,24 +9,36 @@
     border-radius: 2px;
 }
 
+.label_white{
+    color: white;
+}
+.lable_bold{
+    font-weight:900;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.roomList_label{
+margin-top: 40px;
+}
+
 .roomList{
-    width: 100%;
-    margin: 100px 0px 160px;
+    /* width: 100%; */
+    margin-top: 10px;
 }
 
 .apartList{
-    width: 100%;
-    padding: 60px 0px 80px;
+    /* width: 100%;
+    padding: 60px 0px 80px; */
     background-color: rgb(60, 71, 103);
     /* overflow: hidden; */
 }
 
 .guide{
-    width: 100%;
-    padding: 100px 0px 150px;
+    /* width: 100%;
+    padding: 100px 0px 150px; */
 }
 
 .news{
-    width: 100%;
-    padding: 60px 0px;;
+    /* width: 100%;
+    padding: 60px 0px;; */
 }
