--- a/view/src/css/App.css
+++ b/view/src/css/App.css
@@ -31,6 +31,7 @@ padding-left: 20px;
 }
 
 footer{
-  width: 100%;
-  background-color: rgb(55, 55, 55);
+  /* width: 100%; */
+  height: 250px;
+  background-color: rgb(55, 55, 55)!important;
 }
