--- a/view/src/css/content.css
+++ b/view/src/css/content.css
@@ -1,11 +1,11 @@
 .serach{
-    height: 765px;
-    margin-top: -280px;
+    height: 770px;
+    margin-top: -320px;
     background-image: linear-gradient(134deg, rgb(19, 183, 207) -5%, rgb(54, 91, 180) 56%, rgb(54, 91, 180) 56%);
 }
 
 .serach .div-centerPad{
-    padding-top: 14%;
+    margin-top: 350px;
 }
 
 .serach .form-search{
@@ -13,15 +13,22 @@
 }
 
 .serach .label-white{
-    color: white;
+    color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 30px;
+}
+
+.serach #idSearchRoom{
+    font-size: x-large;
+    height: 100px;
 }
 
 .roomList{
-    margin: 60px 0 120px;
+    margin: 60px 0 80px;
 }
 
 .roomList .label-title{
     margin: 20px 0;
+    position: relative;
 }
 
 .roomList .label-bold{
@@ -29,10 +36,36 @@
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.roomList .label-showMore{
+    position: absolute;
+    right: 25px;
+    bottom: 10px;
+    font-size: x-large;
+    color:rgb(101, 101, 101);
+}
+
 .roomList .card{
     transform: scale(1);
     transition: all 0.3s ease-in-out;   /* 부드러운 모션을 위해 추가*/
+    border:none;
 }
+
+.roomList .card-text{
+    color:rgb(101, 101, 101);
+    height: 60px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    /*한줄일경우 */
+    /* white-space: nowrap;*/
+    /*여러줄일경우 각 줄높이*/
+    line-height: 1.3;
+    text-align: left; 
+    word-wrap: break-word;
+    display: -webkit-box; 
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
 .roomList .card:hover{
     transform: scale(1.1);
 }
