--- a/view/src/css/App.css
+++ b/view/src/css/App.css
@@ -22,14 +22,14 @@
   font-weight: bold;
 }
 
-.navi button{
+.navi a{
   color: rgba(255, 255, 255, 0.8);
   margin-top: 5px;
   font-weight:600;
   font-size:x-large;
   transition: all 0.2s ease-in-out;   /* 부드러운 모션을 위해 추가*/
 }
-.navi button:hover{
+.navi a:hover{
   color: #f24d7d;
 }
 
@@ -48,7 +48,7 @@
 .footer .btn-footer{
   margin: 20px 0 10px;
 }
-.footer .btn-footer button{
+.footer .btn-footer a{
   font-size: large;
   margin-left: 20px;
 }
