--- a/view/src/css/main/main.css
+++ b/view/src/css/main/main.css
@@ -11,10 +11,16 @@
 .serach .form-search{
     margin: 0 20px;
 }
-
 .serach .label-white{
+    font-size: 2rem;
     color: rgba(255, 255, 255, 0.8);
     margin-bottom: 30px;
+}
+
+@media(max-width:375px) {
+    .serach .label-white{
+        font-size: 1.8rem;
+    }
 }
 
 .serach #idSearchRoom{
@@ -42,6 +48,12 @@
     bottom: 10px;
     font-size: x-large;
     color:rgb(101, 101, 101);
+}
+
+@media(max-width:375px) {
+    .roomList .label-showMore{
+        display: none;
+    }    
 }
 
 .roomList .card{
