--- a/view/src/css/common/common.css
+++ b/view/src/css/common/common.css
@@ -79,7 +79,7 @@
 }
 
 .div-outline{
-  margin: 150px auto;
+  margin: 150px 20px;
   padding: 30px ;
   border:1px solid rgb(160, 160, 160);
   border-radius: 5px;
