--- a/view/src/css/common/common.css
+++ b/view/src/css/common/common.css
@@ -34,6 +34,12 @@
   color: black;
 }
 
+.div-bottomLine{
+  border-bottom: 1px solid rgb(231, 231, 231);
+  padding-bottom: 20px!important;
+}
+
+
 .navi a:hover{
   color: #f24d7d;
 }
@@ -84,4 +90,14 @@
   border:1px solid rgb(160, 160, 160);
   border-radius: 5px;
   box-shadow: 0 0 3px 1px rgb(160, 160, 160);/* 그림자위치 상하,좌우,흐려짐정도,그림자크기,색상 */
+}
+
+@media(max-width:375px) {
+  .div-outline{
+    margin: 10px 20px;
+    padding: 30px ;
+    border:1px solid rgb(160, 160, 160);
+    border-radius: 5px;
+    box-shadow: 0 0 3px 1px rgb(160, 160, 160);/* 그림자위치 상하,좌우,흐려짐정도,그림자크기,색상 */
+  }
 }
