--- a/view/src/css/map/map.css
+++ b/view/src/css/map/map.css
@@ -1,11 +1,11 @@
 .filter{
-    height: 60px;
+    padding-top: 15px;
     border-bottom: 1px solid rgb(231, 231, 231);
 }
 
-.filter .col-3{
-    height: 60px;
-    border-right: 1px solid rgb(231, 231, 231);
+.filter .col-md-3{
+    /* height: 60px; */
+    /* border-right: 1px solid rgb(231, 231, 231); */
 }
 
 
@@ -13,6 +13,5 @@
     height: 600px;
 }
 .mapCont .col-3{
-    height: 600px;
     border-right: 1px solid rgb(231, 231, 231);
 }
