--- a/view/src/css/map/map.css
+++ b/view/src/css/map/map.css
@@ -1,3 +1,5 @@
+
+
 .filter{
     padding-top: 15px;
     padding: 15px 10px 0 ;
@@ -28,12 +30,24 @@
     height: 700px;
     border-right: 1px solid rgb(231, 231, 231);
 }
+
+
 .mapCont .col-md-3 .pagination{
     margin-top: 20px;
 }
 
 .mapCont .col-md-5{
     padding: 10px 0 0 20px;
+}
+
+/* min-width : from    max-widt : to  */
+/* relative:원래 위치 기준으로 조정 , absolute:상위 위치 기준으로 조정 , fixed: 웹브라우저 기준으로 조정 */
+@media(min-width:376px) {
+    .mapCont .col-md-3 .card-img-top{
+        position: relative; 
+        top: 10%;
+        left: 5%;
+    }
 }
 
 @media(max-width:375px) {
