0519 인증메일의 타이머기능

--- a/view/src/css/common/common.css
+++ b/view/src/css/common/common.css
@@ -101,3 +101,8 @@
     box-shadow: 0 0 3px 1px rgb(160, 160, 160);/* 그림자위치 상하,좌우,흐려짐정도,그림자크기,색상 */
   }
 }
+
+.p-sessionChk{
+  color: #f24d7d;
+  margin: 15px 0 0;
+}
