--- a/view/src/css/common/common.css
+++ b/view/src/css/common/common.css
@@ -49,6 +49,14 @@
   border-radius: 2px;
 }
 
+.navi .nav-name{
+  color: rgba(255, 255, 255, 0.8);
+  font-size:1.5em;
+  position: absolute;
+  top: 25%;
+  right: 0;
+}
+
 .footer{
   /* width: 100%; */
   height: 250px;
@@ -74,13 +82,30 @@
   -webkit-line-clamp: 7;
   -webkit-box-orient: vertical;
 }
-
+/* width가 375미만일경우 */
 @media(max-width:375px) {
   .footer .btn-footer{
     display: none;
   }
   .footer .txt-footer{
     margin-top: 25px;
+  }
+  .div-outline{
+    margin: 10px 20px;
+    padding: 30px ;
+    border:1px solid rgb(160, 160, 160);
+    border-radius: 5px;
+    box-shadow: 0 0 3px 1px rgb(160, 160, 160);/* 그림자위치 상하,좌우,흐려짐정도,그림자크기,색상 */
+  }
+  
+}
+
+@media(max-width:767px) {
+  .navi .nav-name{
+    color: rgba(255, 255, 255, 0.8);
+    font-size:1.7em;
+    left: 0;
+    top:75px;
   }
 }
 
@@ -90,16 +115,6 @@
   border:1px solid rgb(160, 160, 160);
   border-radius: 5px;
   box-shadow: 0 0 3px 1px rgb(160, 160, 160);/* 그림자위치 상하,좌우,흐려짐정도,그림자크기,색상 */
-}
-
-@media(max-width:375px) {
-  .div-outline{
-    margin: 10px 20px;
-    padding: 30px ;
-    border:1px solid rgb(160, 160, 160);
-    border-radius: 5px;
-    box-shadow: 0 0 3px 1px rgb(160, 160, 160);/* 그림자위치 상하,좌우,흐려짐정도,그림자크기,색상 */
-  }
 }
 
 .p-sessionChk{
