--- a/view/src/css/common/common.css
+++ b/view/src/css/common/common.css
@@ -31,7 +31,7 @@
 }
 
 .navi .a-fontBlack{
-  color: black;
+  color: black!important;
 }
 
 .div-bottomLine{
@@ -120,4 +120,17 @@
 .p-sessionChk{
   color: #f24d7d;
   margin: 15px 0 0;
+}
+
+/* readOnly 회색배경제거 */
+.city1:read-only{
+  /* important대신에 all:initial;*/
+  background-color: white!important;
+}
+
+/* input[type=number]의 화살표제거 */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
