0626 css글자초과시 표시안하는 기능 추가

--- a/view/src/css/sell/sell.css
+++ b/view/src/css/sell/sell.css
@@ -36,6 +36,12 @@
     justify-content: center;
 }
 
+.sellRoom .sellRoom-oneLine{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    /*한줄일경우 */
+    white-space: nowrap;
+}
 @media(max-width:767px) {
     .footer{
         display: none;
