0630 오토컴플리트..잘모르겠다

--- a/view/src/css/main/main.css
+++ b/view/src/css/main/main.css
@@ -87,3 +87,8 @@
     width: 100%!important;
     background-color: white;
 }
+
+div.MuiFormControl-root{
+    background-color: white;
+    border-radius: 5px;
+}
